analyseur/dtd.output
Terminals which are not used

   EMPTY
   ANY


State 12 conflicts: 1 reduce/reduce
State 15 conflicts: 1 reduce/reduce
State 16 conflicts: 1 reduce/reduce


Grammar

    0 $accept: main $end

    1 main: dtd_list_opt

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT att_definition_opt CLOSE
    3             | dtd_list_opt ELEMENT IDENT element_content CLOSE
    4             | /* empty */

    5 element_content: children
    6                | cp
    7                | choice
    8                | seq
    9                | mixed
   10                | /* empty */

   11 mixed: OPENPAR mixed_content CLOSEPAR

   12 mixed_content: PCDATA mixed_content_opt

   13 mixed_content_opt: IDENT list_noms
   14                  | /* empty */

   15 list_noms: IDENT PIPE mixed_content_opt

   16 children: choice_card
   17         | seq_card

   18 choice_card: choice card_opt

   19 seq_card: seq card_opt

   20 card_opt: QMARK
   21         | PLUS
   22         | AST
   23         | /* empty */

   24 choice: OPENPAR choice_list_plus CLOSEPAR

   25 choice_list: choice_list PIPE cp
   26            | cp

   27 choice_list_plus: cp PIPE choice_list

   28 seq: OPENPAR seq_list CLOSEPAR

   29 seq_list: seq_list COMMA cp
   30         | cp

   31 cp: IDENT card_opt
   32   | children

   33 att_definition_opt: att_definition_opt attribute
   34                   | /* empty */

   35 attribute: IDENT att_type default_declaration

   36 att_type: CDATA
   37         | TOKENTYPE
   38         | enumerate

   39 enumerate: OPENPAR enum_list_plus CLOSEPAR

   40 enum_list_plus: enum_list PIPE item_enum

   41 enum_list: item_enum
   42          | enum_list PIPE item_enum

   43 item_enum: IDENT

   44 default_declaration: DECLARATION
   45                    | STRING
   46                    | FIXED STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
ELEMENT (258) 3
ATTLIST (259) 2
CLOSE (260) 2 3
OPENPAR (261) 11 24 28 39
CLOSEPAR (262) 11 24 28 39
COMMA (263) 29
PIPE (264) 15 25 27 40 42
FIXED (265) 46
EMPTY (266)
ANY (267)
PCDATA (268) 12
AST (269) 22
QMARK (270) 20
PLUS (271) 21
CDATA (272) 36
IDENT (273) 2 3 13 15 31 35 43
TOKENTYPE (274) 37
DECLARATION (275) 44
STRING (276) 45 46


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
main (23)
    on left: 1, on right: 0
dtd_list_opt (24)
    on left: 2 3 4, on right: 1 2 3
element_content (25)
    on left: 5 6 7 8 9 10, on right: 3
mixed (26)
    on left: 11, on right: 9
mixed_content (27)
    on left: 12, on right: 11
mixed_content_opt (28)
    on left: 13 14, on right: 12 15
list_noms (29)
    on left: 15, on right: 13
children (30)
    on left: 16 17, on right: 5 32
choice_card (31)
    on left: 18, on right: 16
seq_card (32)
    on left: 19, on right: 17
card_opt (33)
    on left: 20 21 22 23, on right: 18 19 31
choice (34)
    on left: 24, on right: 7 18
choice_list (35)
    on left: 25 26, on right: 25 27
choice_list_plus (36)
    on left: 27, on right: 24
seq (37)
    on left: 28, on right: 8 19
seq_list (38)
    on left: 29 30, on right: 28 29
cp (39)
    on left: 31 32, on right: 6 25 26 27 29 30
att_definition_opt (40)
    on left: 33 34, on right: 2 33
attribute (41)
    on left: 35, on right: 33
att_type (42)
    on left: 36 37 38, on right: 35
enumerate (43)
    on left: 39, on right: 38
enum_list_plus (44)
    on left: 40, on right: 39
enum_list (45)
    on left: 41 42, on right: 40 42
item_enum (46)
    on left: 43, on right: 40 41 42
default_declaration (47)
    on left: 44 45 46, on right: 35


state 0

    0 $accept: . main $end

    $default  reduce using rule 4 (dtd_list_opt)

    main          go to state 1
    dtd_list_opt  go to state 2


state 1

    0 $accept: main . $end

    $end  shift, and go to state 3


state 2

    1 main: dtd_list_opt .
    2 dtd_list_opt: dtd_list_opt . ATTLIST IDENT att_definition_opt CLOSE
    3             | dtd_list_opt . ELEMENT IDENT element_content CLOSE

    ELEMENT  shift, and go to state 4
    ATTLIST  shift, and go to state 5

    $default  reduce using rule 1 (main)


state 3

    0 $accept: main $end .

    $default  accept


state 4

    3 dtd_list_opt: dtd_list_opt ELEMENT . IDENT element_content CLOSE

    IDENT  shift, and go to state 6


state 5

    2 dtd_list_opt: dtd_list_opt ATTLIST . IDENT att_definition_opt CLOSE

    IDENT  shift, and go to state 7


state 6

    3 dtd_list_opt: dtd_list_opt ELEMENT IDENT . element_content CLOSE

    OPENPAR  shift, and go to state 8
    IDENT    shift, and go to state 9

    $default  reduce using rule 10 (element_content)

    element_content  go to state 10
    mixed            go to state 11
    children         go to state 12
    choice_card      go to state 13
    seq_card         go to state 14
    choice           go to state 15
    seq              go to state 16
    cp               go to state 17


state 7

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT . att_definition_opt CLOSE

    $default  reduce using rule 34 (att_definition_opt)

    att_definition_opt  go to state 18


state 8

   11 mixed: OPENPAR . mixed_content CLOSEPAR
   24 choice: OPENPAR . choice_list_plus CLOSEPAR
   28 seq: OPENPAR . seq_list CLOSEPAR

    OPENPAR  shift, and go to state 19
    PCDATA   shift, and go to state 20
    IDENT    shift, and go to state 9

    mixed_content     go to state 21
    children          go to state 22
    choice_card       go to state 13
    seq_card          go to state 14
    choice            go to state 23
    choice_list_plus  go to state 24
    seq               go to state 25
    seq_list          go to state 26
    cp                go to state 27


state 9

   31 cp: IDENT . card_opt

    AST    shift, and go to state 28
    QMARK  shift, and go to state 29
    PLUS   shift, and go to state 30

    $default  reduce using rule 23 (card_opt)

    card_opt  go to state 31


state 10

    3 dtd_list_opt: dtd_list_opt ELEMENT IDENT element_content . CLOSE

    CLOSE  shift, and go to state 32


state 11

    9 element_content: mixed .

    $default  reduce using rule 9 (element_content)


state 12

    5 element_content: children .
   32 cp: children .

    CLOSE     reduce using rule 5 (element_content)
    CLOSE     [reduce using rule 32 (cp)]
    $default  reduce using rule 5 (element_content)


state 13

   16 children: choice_card .

    $default  reduce using rule 16 (children)


state 14

   17 children: seq_card .

    $default  reduce using rule 17 (children)


state 15

    7 element_content: choice .
   18 choice_card: choice . card_opt

    AST    shift, and go to state 28
    QMARK  shift, and go to state 29
    PLUS   shift, and go to state 30

    CLOSE     reduce using rule 7 (element_content)
    CLOSE     [reduce using rule 23 (card_opt)]
    $default  reduce using rule 7 (element_content)

    card_opt  go to state 33


state 16

    8 element_content: seq .
   19 seq_card: seq . card_opt

    AST    shift, and go to state 28
    QMARK  shift, and go to state 29
    PLUS   shift, and go to state 30

    CLOSE     reduce using rule 8 (element_content)
    CLOSE     [reduce using rule 23 (card_opt)]
    $default  reduce using rule 8 (element_content)

    card_opt  go to state 34


state 17

    6 element_content: cp .

    $default  reduce using rule 6 (element_content)


state 18

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT att_definition_opt . CLOSE
   33 att_definition_opt: att_definition_opt . attribute

    CLOSE  shift, and go to state 35
    IDENT  shift, and go to state 36

    attribute  go to state 37


state 19

   24 choice: OPENPAR . choice_list_plus CLOSEPAR
   28 seq: OPENPAR . seq_list CLOSEPAR

    OPENPAR  shift, and go to state 19
    IDENT    shift, and go to state 9

    children          go to state 22
    choice_card       go to state 13
    seq_card          go to state 14
    choice            go to state 23
    choice_list_plus  go to state 24
    seq               go to state 25
    seq_list          go to state 26
    cp                go to state 27


state 20

   12 mixed_content: PCDATA . mixed_content_opt

    IDENT  shift, and go to state 38

    $default  reduce using rule 14 (mixed_content_opt)

    mixed_content_opt  go to state 39


state 21

   11 mixed: OPENPAR mixed_content . CLOSEPAR

    CLOSEPAR  shift, and go to state 40


state 22

   32 cp: children .

    $default  reduce using rule 32 (cp)


state 23

   18 choice_card: choice . card_opt

    AST    shift, and go to state 28
    QMARK  shift, and go to state 29
    PLUS   shift, and go to state 30

    $default  reduce using rule 23 (card_opt)

    card_opt  go to state 33


state 24

   24 choice: OPENPAR choice_list_plus . CLOSEPAR

    CLOSEPAR  shift, and go to state 41


state 25

   19 seq_card: seq . card_opt

    AST    shift, and go to state 28
    QMARK  shift, and go to state 29
    PLUS   shift, and go to state 30

    $default  reduce using rule 23 (card_opt)

    card_opt  go to state 34


state 26

   28 seq: OPENPAR seq_list . CLOSEPAR
   29 seq_list: seq_list . COMMA cp

    CLOSEPAR  shift, and go to state 42
    COMMA     shift, and go to state 43


state 27

   27 choice_list_plus: cp . PIPE choice_list
   30 seq_list: cp .

    PIPE  shift, and go to state 44

    $default  reduce using rule 30 (seq_list)


state 28

   22 card_opt: AST .

    $default  reduce using rule 22 (card_opt)


state 29

   20 card_opt: QMARK .

    $default  reduce using rule 20 (card_opt)


state 30

   21 card_opt: PLUS .

    $default  reduce using rule 21 (card_opt)


state 31

   31 cp: IDENT card_opt .

    $default  reduce using rule 31 (cp)


state 32

    3 dtd_list_opt: dtd_list_opt ELEMENT IDENT element_content CLOSE .

    $default  reduce using rule 3 (dtd_list_opt)


state 33

   18 choice_card: choice card_opt .

    $default  reduce using rule 18 (choice_card)


state 34

   19 seq_card: seq card_opt .

    $default  reduce using rule 19 (seq_card)


state 35

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT att_definition_opt CLOSE .

    $default  reduce using rule 2 (dtd_list_opt)


state 36

   35 attribute: IDENT . att_type default_declaration

    OPENPAR    shift, and go to state 45
    CDATA      shift, and go to state 46
    TOKENTYPE  shift, and go to state 47

    att_type   go to state 48
    enumerate  go to state 49


state 37

   33 att_definition_opt: att_definition_opt attribute .

    $default  reduce using rule 33 (att_definition_opt)


state 38

   13 mixed_content_opt: IDENT . list_noms

    IDENT  shift, and go to state 50

    list_noms  go to state 51


state 39

   12 mixed_content: PCDATA mixed_content_opt .

    $default  reduce using rule 12 (mixed_content)


state 40

   11 mixed: OPENPAR mixed_content CLOSEPAR .

    $default  reduce using rule 11 (mixed)


state 41

   24 choice: OPENPAR choice_list_plus CLOSEPAR .

    $default  reduce using rule 24 (choice)


state 42

   28 seq: OPENPAR seq_list CLOSEPAR .

    $default  reduce using rule 28 (seq)


state 43

   29 seq_list: seq_list COMMA . cp

    OPENPAR  shift, and go to state 19
    IDENT    shift, and go to state 9

    children     go to state 22
    choice_card  go to state 13
    seq_card     go to state 14
    choice       go to state 23
    seq          go to state 25
    cp           go to state 52


state 44

   27 choice_list_plus: cp PIPE . choice_list

    OPENPAR  shift, and go to state 19
    IDENT    shift, and go to state 9

    children     go to state 22
    choice_card  go to state 13
    seq_card     go to state 14
    choice       go to state 23
    choice_list  go to state 53
    seq          go to state 25
    cp           go to state 54


state 45

   39 enumerate: OPENPAR . enum_list_plus CLOSEPAR

    IDENT  shift, and go to state 55

    enum_list_plus  go to state 56
    enum_list       go to state 57
    item_enum       go to state 58


state 46

   36 att_type: CDATA .

    $default  reduce using rule 36 (att_type)


state 47

   37 att_type: TOKENTYPE .

    $default  reduce using rule 37 (att_type)


state 48

   35 attribute: IDENT att_type . default_declaration

    FIXED        shift, and go to state 59
    DECLARATION  shift, and go to state 60
    STRING       shift, and go to state 61

    default_declaration  go to state 62


state 49

   38 att_type: enumerate .

    $default  reduce using rule 38 (att_type)


state 50

   15 list_noms: IDENT . PIPE mixed_content_opt

    PIPE  shift, and go to state 63


state 51

   13 mixed_content_opt: IDENT list_noms .

    $default  reduce using rule 13 (mixed_content_opt)


state 52

   29 seq_list: seq_list COMMA cp .

    $default  reduce using rule 29 (seq_list)


state 53

   25 choice_list: choice_list . PIPE cp
   27 choice_list_plus: cp PIPE choice_list .

    PIPE  shift, and go to state 64

    $default  reduce using rule 27 (choice_list_plus)


state 54

   26 choice_list: cp .

    $default  reduce using rule 26 (choice_list)


state 55

   43 item_enum: IDENT .

    $default  reduce using rule 43 (item_enum)


state 56

   39 enumerate: OPENPAR enum_list_plus . CLOSEPAR

    CLOSEPAR  shift, and go to state 65


state 57

   40 enum_list_plus: enum_list . PIPE item_enum
   42 enum_list: enum_list . PIPE item_enum

    PIPE  shift, and go to state 66


state 58

   41 enum_list: item_enum .

    $default  reduce using rule 41 (enum_list)


state 59

   46 default_declaration: FIXED . STRING

    STRING  shift, and go to state 67


state 60

   44 default_declaration: DECLARATION .

    $default  reduce using rule 44 (default_declaration)


state 61

   45 default_declaration: STRING .

    $default  reduce using rule 45 (default_declaration)


state 62

   35 attribute: IDENT att_type default_declaration .

    $default  reduce using rule 35 (attribute)


state 63

   15 list_noms: IDENT PIPE . mixed_content_opt

    IDENT  shift, and go to state 38

    $default  reduce using rule 14 (mixed_content_opt)

    mixed_content_opt  go to state 68


state 64

   25 choice_list: choice_list PIPE . cp

    OPENPAR  shift, and go to state 19
    IDENT    shift, and go to state 9

    children     go to state 22
    choice_card  go to state 13
    seq_card     go to state 14
    choice       go to state 23
    seq          go to state 25
    cp           go to state 69


state 65

   39 enumerate: OPENPAR enum_list_plus CLOSEPAR .

    $default  reduce using rule 39 (enumerate)


state 66

   40 enum_list_plus: enum_list PIPE . item_enum
   42 enum_list: enum_list PIPE . item_enum

    IDENT  shift, and go to state 55

    item_enum  go to state 70


state 67

   46 default_declaration: FIXED STRING .

    $default  reduce using rule 46 (default_declaration)


state 68

   15 list_noms: IDENT PIPE mixed_content_opt .

    $default  reduce using rule 15 (list_noms)


state 69

   25 choice_list: choice_list PIPE cp .

    $default  reduce using rule 25 (choice_list)


state 70

   40 enum_list_plus: enum_list PIPE item_enum .
   42 enum_list: enum_list PIPE item_enum .

    PIPE      reduce using rule 42 (enum_list)
    $default  reduce using rule 40 (enum_list_plus)
